@@ -62,6 +62,8 @@ class PrimitiveFieldGenerator : public FieldGenerator {
   string GetBoxedType() const;
 
  private:
+  bool ShouldUseStringEncodingCache() const;
+
   const FieldDescriptor* descriptor_;
   map<string, string> variables_;
 
