@@ -1,3 +1,8 @@
+????-??-?? version 2.3.1:
+
+  Java
+  * Improved performance of string serialization.
+
 2010-01-08 version 2.3.0:
 
   General
